wrap owner list item in a link styled as list-group-item to make it consistent with the scraper list items see https://github.com/openaustralia/morph/pull/640#issuecomment-96831543

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -21,9 +21,7 @@
 }
 
 .owner-item {
-  + .owner-item {
-    margin-top: 1.5em;
-  }
+  margin-top: 0;
 
   .media-left {
     @media (min-width: $screen-sm-min) {
